Realign CSS to make load order the same for all pages, also fixed the menu hover to be consistent across all pages

--- a/USFarmExchange/USFarmExchange/styles/base.css
+++ b/USFarmExchange/USFarmExchange/styles/base.css
@@ -124,6 +124,7 @@ div.RadMenuPopup,
   #wrapper .header .RadMenu {
     margin: 10px 0;
     float: right !important;
+    color: black;
   }
 
     #wrapper .header .RadMenu .rmRootGroup {
@@ -157,6 +158,7 @@ div.RadMenuPopup,
   background-color: mediumseagreen !important;
   padding: 5px 0;
   margin-bottom: 40px;
+  color: black;
 }
 
   #wrapper .smallHeader .RadMenu {
@@ -167,7 +169,7 @@ div.RadMenuPopup,
     #wrapper .smallHeader .RadMenu .rmRootGroup {
       border-width: 0 !important;
       border-color: transparent !important;
-      background-color: #ffffff !important;
+      background-color: #f7f7f7 !important;
     }
 
       #wrapper .smallHeader .RadMenu .rmRootGroup :hover {
@@ -177,11 +179,11 @@ div.RadMenuPopup,
       #wrapper .smallheader .RadMenu .rmRootGroup .rmLink {
         border-width: 0 !important;
         border-color: transparent !important;
-        background-color: #ffffff !important;
+        background-color: #f7f7f7 !important;
       }
 
         #wrapper .smallheader .RadMenu .rmRootGroup .rmLink:hover {
-          background-color: darkseagreen !important;
+          background-color: cadetblue !important;
           border-radius: 10px;
         }
 
